update search order

--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -1,5 +1,5 @@
 .bg3 { background-color: #FFD700; } /* Vàng cho đơn hôm nay */
-.bg5 { background-color: #FF4500; } /* Cam cho đơn chưa hoàn thành */
+.bg5 { background-color: #421404; } /* Cam cho đơn chưa hoàn thành */
 .bg6 { background-color: #32CD32; } /* Xanh lá cho đơn hoàn thành hôm nay */
 
 table {
