--- a/src/app/pages/ui-components/orders/orders.component.html
+++ b/src/app/pages/ui-components/orders/orders.component.html
@@ -2,62 +2,102 @@
   <mat-card-header>
     <mat-card-title class="m-b-0">Orders</mat-card-title>
     <span class="flex-1-auto"></span>
-    <button
-      mat-flat-button
-      color="accent"
-      matTooltipPosition="left"
-      class="m-l-8"
-      matTooltipHideDelay="100000"
-      (click)="triggerFileInput()"
-    >
+    <button mat-flat-button color="accent" matTooltipPosition="left" class="m-l-8" matTooltipHideDelay="100000" (click)="triggerFileInput()">
       <mat-icon>upload_file</mat-icon> <span fxHide.xs>Import from Excel</span>
     </button>
-    <input
-      type="file"
-      #fileInput
-      style="display: none"
-      (change)="onFileChange($event)"
-      accept=".xlsx, .xls"
-    />
-    <button
-      mat-flat-button
-      color="accent"
-      matTooltipPosition="left"
-      class="m-l-8"
-      matTooltipHideDelay="100000"
-      (click)="downloadTemplate()"
-    >
+    <input type="file" #fileInput style="display: none" (change)="onFileChange($event)" accept=".xlsx, .xls" />
+    <button mat-flat-button color="accent" matTooltipPosition="left" class="m-l-8" matTooltipHideDelay="100000" (click)="downloadTemplate()">
       <mat-icon>download</mat-icon> <span fxHide.xs>Download Template</span>
     </button>
   </mat-card-header>
 
   <mat-card-content class="b-t-1">
+    <!-- Bộ lọc -->
+    <div class="filters m-t-16 m-b-16">
+      <mat-form-field appearance="outline" class="filter-field">
+        <mat-label>Start Date</mat-label>
+        <input matInput [matDatepicker]="startPicker" [(ngModel)]="startDate">
+        <mat-datepicker-toggle matSuffix [for]="startPicker"></mat-datepicker-toggle>
+        <mat-datepicker #startPicker></mat-datepicker>
+      </mat-form-field>
+
+      <mat-form-field appearance="outline" class="filter-field">
+        <mat-label>End Date</mat-label>
+        <input matInput [matDatepicker]="endPicker" [(ngModel)]="endDate">
+        <mat-datepicker-toggle matSuffix [for]="endPicker"></mat-datepicker-toggle>
+        <mat-datepicker #endPicker></mat-datepicker>
+      </mat-form-field>
+
+      <mat-form-field appearance="outline" class="filter-field">
+        <mat-label>Distributor</mat-label>
+        <mat-select [(value)]="selectedDistributorId">
+          <!-- Mặc định là "All" khi selectedDistributorId = null -->
+          <mat-option [value]="null">All</mat-option>
+          <mat-option *ngFor="let distributor of distributors" [value]="distributor.id">
+            {{ distributor.distributorName }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+
+      <mat-form-field appearance="outline" class="filter-field">
+        <mat-label>Area</mat-label>
+        <mat-select [(value)]="selectedAreaId">
+          <!-- Mặc định là "All" khi selectedAreaId = null -->
+          <mat-option [value]="null">All</mat-option>
+          <mat-option *ngFor="let area of areas" [value]="area.id">
+            {{ area.areaName }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+
+      <mat-form-field appearance="outline" class="filter-field">
+        <mat-label>Product</mat-label>
+        <mat-select [(value)]="selectedProductInformationId">
+          <!-- Mặc định là "All" khi selectedProductInformationId = null -->
+          <mat-option [value]="null">All</mat-option>
+          <mat-option *ngFor="let product of productInformations" [value]="product.id">
+            {{ product.productName }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+
+      <mat-form-field appearance="outline" class="filter-field">
+        <mat-label>Status</mat-label>
+        <mat-select [(value)]="selectedStatus">
+          <!-- Mặc định là "All" khi selectedStatus = null -->
+          <mat-option [value]="null">All</mat-option>
+          <mat-option [value]="0">Pending</mat-option>
+          <mat-option [value]="1">Processing</mat-option>
+          <mat-option [value]="2">Completed</mat-option>
+          <mat-option [value]="3">Incomplete</mat-option>
+        </mat-select>
+      </mat-form-field>
+
+      <!-- Nút Search -->
+      <button mat-flat-button color="primary" (click)="applyFilter()">
+        <mat-icon>search</mat-icon> Search
+      </button>
+    </div>
+
     <!-- Hiển thị báo cáo import nếu có -->
     <div *ngIf="importReport" class="import-report m-b-16">
       <h3>Import Report</h3>
       <p>Successful Imports: {{ importReport.successfulImports }}</p>
       <p>Duplicate Rows: {{ importReport.duplicateRows }}</p>
     </div>
-    
+
     <div class="table-responsive m-t-16">
       <mat-form-field class="w-100" appearance="outline">
-        <input matInput type="text" (keyup)="doFilter($any($event).target.value)" placeholder="Search....">
+        <input matInput type="text" (keyup)="doFilter($any($event).target.value)" placeholder="Search...">
       </mat-form-field>
     </div>
-    
+
     <div class="table-responsive m-t-16">
       <table mat-table [dataSource]="dataSource" class="w-100" matSort>
         <ng-container matColumnDef="action">
-          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">
-            Action
-          </th>
+          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">Action</th>
           <td mat-cell *matCellDef="let element" class="mat-body-1">
-            <button
-              mat-flat-button
-              color="primary"
-              [matMenuTriggerFor]="actions"
-              class="m-t-8"
-            >
+            <button mat-flat-button color="primary" [matMenuTriggerFor]="actions" class="m-t-8">
               Action<mat-icon>arrow_drop_down</mat-icon>
             </button>
             <mat-menu class="cardWithShadow" #actions="matMenu">
@@ -67,16 +107,10 @@
           </td>
         </ng-container>
         <ng-container matColumnDef="status">
-          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>
-            Status
-          </th>
+          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>Status</th>
           <td mat-cell *matCellDef="let element" class="mat-body-1">
             <ng-container *ngIf="element.status === 0 || element.status === 1; else nonClickableStatus">
-              <a
-                [routerLink]="['/ui-components/order-details', element.id]"
-                [ngClass]="getStatusClass(element.status)"
-                class="status-link"
-              >
+              <a [routerLink]="['/ui-components/order-details', element.id]" [ngClass]="getStatusClass(element.status)" class="status-link">
                 {{ getStatusText(element.status) }}
               </a>
             </ng-container>
@@ -88,100 +122,52 @@
           </td>
         </ng-container>
         <ng-container matColumnDef="code">
-          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>
-            Order Code
-          </th>
-          <td mat-cell *matCellDef="let element" class="mat-body-1">
-            {{ element.orderCode }}
-          </td>
+          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>Order Code</th>
+          <td mat-cell *matCellDef="let element" class="mat-body-1">{{ element.orderCode }}</td>
         </ng-container>
         <ng-container matColumnDef="exportDate">
-          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>
-            Export Date
-          </th>
-          <td mat-cell *matCellDef="let element" class="mat-body-1">
-            {{ element.exportDate | date: 'dd/MM/yyyy' }}
-          </td>
+          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>Export Date</th>
+          <td mat-cell *matCellDef="let element" class="mat-body-1">{{ element.exportDate | date: 'dd/MM/yyyy' }}</td>
         </ng-container>
         <ng-container matColumnDef="quantityVehicle">
-          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>
-            Driver Count
-          </th>
-          <td mat-cell *matCellDef="let element" class="mat-body-1">
-            {{ element.driverNumber }}
-          </td>
+          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>Driver Count</th>
+          <td mat-cell *matCellDef="let element" class="mat-body-1">{{ element.driverNumber }}</td>
         </ng-container>
         <ng-container matColumnDef="vehicleNumber">
-          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>
-            Vehicle Number
-          </th>
-          <td mat-cell *matCellDef="let element" class="mat-body-1">
-            {{ element.vehicleNumber }}
-          </td>
+          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>Vehicle Number</th>
+          <td mat-cell *matCellDef="let element" class="mat-body-1">{{ element.vehicleNumber }}</td>
         </ng-container>
         <ng-container matColumnDef="driverName">
-          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>
-            Driver Name
-          </th>
-          <td mat-cell *matCellDef="let element" class="mat-body-1">
-            {{ element.driverName }}
-          </td>
+          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>Driver Name</th>
+          <td mat-cell *matCellDef="let element" class="mat-body-1">{{ element.driverName }}</td>
         </ng-container>
         <ng-container matColumnDef="driverPhoneNumber">
-          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>
-            Driver Phone Number
-          </th>
-          <td mat-cell *matCellDef="let element" class="mat-body-1">
-            {{ element.driverPhoneNumber }}
-          </td>
+          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>Driver Phone Number</th>
+          <td mat-cell *matCellDef="let element" class="mat-body-1">{{ element.driverPhoneNumber }}</td>
         </ng-container>
         <ng-container matColumnDef="weightOrder">
-          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>
-            Weight (kg)
-          </th>
-          <td mat-cell *matCellDef="let element" class="mat-body-1">
-            {{ element.orderDetail?.requestedWeight }}
-          </td>
+          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>Weight (kg)</th>
+          <td mat-cell *matCellDef="let element" class="mat-body-1">{{ element.orderDetail?.requestedWeight }}</td>
         </ng-container>
         <ng-container matColumnDef="unitOrder">
-          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>
-            Quantity (bags)
-          </th>
-          <td mat-cell *matCellDef="let element" class="mat-body-1">
-            {{ element.orderDetail?.requestedUnits }}
-          </td>
+          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>Quantity (bags)</th>
+          <td mat-cell *matCellDef="let element" class="mat-body-1">{{ element.orderDetail?.requestedUnits }}</td>
         </ng-container>
         <ng-container matColumnDef="manufactureDate">
-          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>
-            Manufacture Date
-          </th>
-          <td mat-cell *matCellDef="let element" class="mat-body-1">
-            {{ element.orderDetail?.manufactureDate | date: 'dd/MM/yyyy' }}
-          </td>
+          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>Manufacture Date</th>
+          <td mat-cell *matCellDef="let element" class="mat-body-1">{{ element.orderDetail?.manufactureDate | date: 'dd/MM/yyyy' }}</td>
         </ng-container>
         <ng-container matColumnDef="productName">
-          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>
-            Product Name
-          </th>
-          <td mat-cell *matCellDef="let element" class="mat-body-1">
-            {{ element.orderDetail?.productName || 'N/A' }}
-          </td>
+          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>Product Name</th>
+          <td mat-cell *matCellDef="let element" class="mat-body-1">{{ element.orderDetail?.productName || 'N/A' }}</td>
         </ng-container>
         <ng-container matColumnDef="distributorName">
-          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>
-            Distributor Name
-          </th>
-          <td mat-cell *matCellDef="let element" class="mat-body-1">
-            {{ element.distributorName || 'N/A' }}
-          </td>
+          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>Distributor Name</th>
+          <td mat-cell *matCellDef="let element" class="mat-body-1">{{ element.distributorName || 'N/A' }}</td>
         </ng-container>
         <ng-container matColumnDef="area">
-          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>
-            Area
-          </th>
-          <td mat-cell *matCellDef="let element" class="mat-body-1">
-            {{ element.area || 'N/A' }}
-          </td>
+          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>Area</th>
+          <td mat-cell *matCellDef="let element" class="mat-body-1">{{ element.area || 'N/A' }}</td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
