--- a/src/app/pages/ui-components/orders/order-detail/order-details.component.html
+++ b/src/app/pages/ui-components/orders/order-detail/order-details.component.html
@@ -123,8 +123,8 @@
       </div>
       <div class="info-section" *ngIf="sensorRecord.length > 0">
         <div class="section-header">
-          <h3 class="section-title">Sensor Record {{orderDetail.id}}</h3>
-          <button
+          <h3 class="section-title">Sensor Record</h3>
+          <!-- <button
         mat-flat-button
         color="primary"
         matTooltipPosition="left"
@@ -133,7 +133,7 @@
         (click)="addReplaceUnit(orderDetail.id)"
       >
         <mat-icon>add</mat-icon> <span fxHide.xs>Add Replace Unit</span>
-      </button>
+      </button> -->
         </div>
         <div class="info-content" >
           <table class="table">
@@ -146,88 +146,61 @@
               </tr>
             </thead>
             <tbody>
-              <tr *ngFor="let item of sensorRecord">
+              <tr *ngFor="let item of sensorRecord" [ngClass]="{'newest-row': item === latestRecord}">
                 <td>{{ item.lineId }}</td>
-                <td>{{ item.sensorUnits }}</td>
-                <td>{{ item.sensorUnits * orderDetail.productInformation.weightPerUnit }}</td>
+                <td>
+                  {{ item === latestRecord && dataSensorByLine?.value ? dataSensorByLine?.value : item.sensorUnits }}
+                </td>
+                <td>
+                  {{ item.sensorUnits *  orderDetail.productInformation.weightPerUnit }}
+                </td>
                 <td>{{ item.recordTime | date: 'yyyy-MM-dd HH:mm:ss' }}</td>
               </tr>
             </tbody>
-            <tfoot>
+            <tfoot *ngIf="orderDetail.defectiveUnits">
               <tr>
                 <td><strong>Total:</strong></td>
-                <td><strong>{{ totalUnits }} / {{orderDetail.requestedUnits}}</strong></td>
-                <td><strong>{{ totalWeight }} / {{orderDetail.requestedWeight}}</strong></td>
+                <td><strong>{{ orderDetail.defectiveUnits }} / {{orderDetail.requestedUnits}}</strong></td>
+                <td><strong>{{ orderDetail.defectiveUnits * orderDetail.productInformation.weightPerUnit }} / {{orderDetail.requestedWeight}}</strong></td>
                 <td *ngIf="orderDetail.replacedUnits"><strong>Đã bổ sung: {{orderDetail.replacedUnits}} túi</strong></td>
               </tr>
             </tfoot>
           </table>
         </div>
       </div>
-      <!-- Order Line Detail -->
-      <!-- <div class="info-section" *ngIf="orderLineDetails">
-      <h3 class="section-title">Assigned Line</h3>
-      <div class="info-grid">
-        <div class="info-item">
-          <span class="label">Sequence Number:</span>
-          <span class="value">{{ orderLineDetails.sequenceNumber }}</span>
-        </div>
-        <div class="info-item">
-          <span class="label">Line:</span>
-          <span class="value">{{ orderLineDetails.line }}</span>
-        </div>
-        <div class="info-item">
-          <span class="label">Created At:</span>
-          <span class="value">{{ orderLineDetails.createdAt | date: 'dd/MM/yyyy HH:mm:ss' }}</span>
-        </div>
-      </div>
-    </div> -->
+      
     </mat-card-content>
 
-    <!-- <mat-card-actions class="order-actions">
-
-    <mat-form-field *ngIf="!hasAssignedLine()" appearance="outline" class="line-select">
-      <mat-label>Select Line</mat-label>
-      <mat-select [(ngModel)]="selectedLine" [disabled]="orderDetail.order.status === 2 || isStarting">
-        <mat-option *ngFor="let line of lines" [value]="line">
-          Line {{ line }}
-        </mat-option>
-      </mat-select>
-    </mat-form-field>
-    <button mat-raised-button color="primary" (click)="goBack()">Back</button>
-    <button
-      mat-raised-button
-      color="accent"
-      
-      [disabled]="hasAssignedLine() || orderDetail.order.status === 2 || isStarting || !selectedLine"
-    >
-      {{ isStarting ? 'Starting...' : 'Start' }}
-    </button>
-  </mat-card-actions> -->
+    
     <!-- Actions -->
-    <mat-card-actions class="order-actions">
-      <!-- Select Line -->
-      <mat-form-field appearance="outline" class="line-select">
-        <mat-label>Select Line</mat-label>
-        <mat-select [(ngModel)]="selectedLine" [disabled]="orderDetail.order.status === 2 || isRunning">
-          <mat-option *ngFor="let line of lines" [value]="line">Line {{ line }}</mat-option>
-        </mat-select>
-      </mat-form-field>
-
-      <!-- Back Button -->
-      <button mat-raised-button color="warn" (click)="goBack()">Back</button>
-
-      <!-- Start/Stop Button -->
-      <button mat-raised-button [color]="isRunning ? 'warn' : 'accent'" (click)="toggleOrder()"
-        [disabled]="orderDetail.order.status === 2 || isStarting || !selectedLine">
-        <mat-progress-spinner *ngIf="isStarting" mode="indeterminate" diameter="20"></mat-progress-spinner>
-        {{ isRunning ? 'Stop' : (isStarting ? 'Starting...' : 'Start') }}
-      </button>
-
-      <!-- Complete Button -->
-      <button mat-raised-button color="primary" (click)="completeOrder()" 
-      [disabled]="totalUnits < orderDetail.requestedUnits">
-        Complete
-      </button>
+    <mat-card-actions class="order-actions" *ngIf="orderDetail.order.status !== 2">
+      <div class="container">
+        <!-- Select Line (Bên trái trên desktop, trên cùng ở mobile) -->
+        <mat-form-field appearance="outline" class="line-select">
+          <mat-label>Chọn line để bắt đầu xuất hàng</mat-label>
+          <mat-select [(ngModel)]="selectedLine" [disabled]="orderDetail.order.status === 2 || isRunning">
+            <mat-option *ngFor="let line of lines" [value]="line">Line {{ line }}</mat-option>
+          </mat-select>
+        </mat-form-field>
+    
+        <!-- Nhóm Button (Bên phải trên desktop, xuống hàng ở mobile) -->
+        <div class="button-group">
+          <button mat-raised-button color="warn" (click)="goBack()">Back</button>
+    
+          <button mat-raised-button [color]="isRunning ? 'warn' : 'accent'" (click)="toggleOrder()"
+            [disabled]="orderDetail.order.status === 2 || isStarting || !selectedLine">
+            <mat-progress-spinner *ngIf="isStarting" mode="indeterminate" diameter="20"></mat-progress-spinner>
+            {{ isRunning ? 'Stop' : (isStarting ? 'Starting...' : 'Start') }}
+          </button>
+    
+          <button mat-raised-button color="primary" (click)="completeOrder()" 
+          [disabled]="totalUnits < orderDetail.requestedUnits || isSignalRRunning">
+            Complete
+          </button>
+        </div>
+      </div>
     </mat-card-actions>
+    
+    
+    
   </mat-card>
