--- a/src/app/pages/ui-components/orders/order-detail/order-details.component.scss
+++ b/src/app/pages/ui-components/orders/order-detail/order-details.component.scss
@@ -103,17 +103,29 @@ mat-card-subtitle {
 }
 
 .order-actions {
-  display: flex;
-  gap: 10px;
-  justify-content: flex-end;
   padding: 16px;
-  background: #f5f5f5;
-  border-radius: 8px;
 }
+
+.container {
+  display: flex;
+  justify-content: space-between; /* Giữ khoảng cách giữa dropdown và button */
+  align-items: center;
+  width: 100%; 
+}
+
 .line-select {
-  flex: 1;
-  max-width: 200px;
+  width: 500px;
 }
+
+/* Desktop: Nút ở bên phải */
+.button-group {
+  display: flex;
+  gap: 8px;
+  justify-content: flex-end; /* Đẩy về bên phải */
+  flex-grow: 1; /* Giúp nhóm nút chiếm hết không gian còn lại trên hàng */
+  text-align: right; /* Căn phải các nút */
+}
+
 button mat-progress-spinner {
   margin-right: 5px;
   vertical-align: middle;
@@ -210,7 +222,10 @@ mat-spinner {
   background-color: #f4f4f4;
   font-weight: bold;
 }
-
+.newest-row {
+  background-color: #d4edda; /* Màu nền xanh nhạt */
+  font-weight: bold; /* Chữ đậm */
+}
 .sensor-group {
   margin-bottom: 20px;
 }
@@ -296,7 +311,8 @@ mat-spinner {
 .table {
   width: 95%;
   border-collapse: collapse;
-  margin:auto
+  margin:auto;
+  margin-bottom: 25px;
 }
 
 .table th, .table td {
@@ -352,6 +368,21 @@ mat-spinner {
   .header-content {
     margin-left: 0; /* Xóa margin trên mobile */
   }
+  .order-actions {
+    margin:auto;
+  }
+  .line-select {
+    width: 250px;
+  }
+  .container {
+    flex-direction: column; /* Chuyển sang layout dọc */
+    align-items: flex-start; /* Căn lề trái */
+  }
 
+  .button-group {
+    width: 100%; /* Để các nút chiếm hết chiều rộng */
+    justify-content: flex-start; /* Căn lề trái */
+    margin-top: 8px; /* Tạo khoảng cách với dropdown */
+  }
   
 }
