Update order detail button logic: Simplify the complete order button's disabled condition by removing the totalUnits check, ensuring it only depends on the isSignalRRunning state.

--- a/src/app/pages/ui-components/orders/order-detail/order-details.component.html
+++ b/src/app/pages/ui-components/orders/order-detail/order-details.component.html
@@ -182,7 +182,7 @@
           </button>
     
           <button mat-raised-button color="primary" (click)="completeOrder()" 
-          [disabled]="totalUnits < orderDetail.requestedUnits || isSignalRRunning">
+          [disabled]="isSignalRRunning">
             Complete
           </button>
         </div>
