--- a/src/app/pages/ui-components/distributors/distributors.component.html
+++ b/src/app/pages/ui-components/distributors/distributors.component.html
@@ -67,15 +67,11 @@
           <td mat-cell *matCellDef="let element" class="mat-body-1">{{ element.distributorName }}</td>
         </ng-container>
 
-        <ng-container matColumnDef="address">
-          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>Address</th>
-          <td mat-cell *matCellDef="let element" class="mat-body-1">{{ element.address }}</td>
+        <ng-container matColumnDef="province">
+          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>Province</th>
+          <td mat-cell *matCellDef="let element" class="mat-body-1">{{ element.province }}</td>
         </ng-container>
 
-        <ng-container matColumnDef="phoneNumber">
-          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>Phone Number</th>
-          <td mat-cell *matCellDef="let element" class="mat-body-1">{{ element.phoneNumber }}</td>
-        </ng-container>
 
         <ng-container matColumnDef="area">
           <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>Area</th>
